[metadata]
name = taintstats
version = 0.1.0
description = BuzzTroll Slack Data Gathering
long_description = file: README.md
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
package_dir=
    =.
packages=find:
install_requires=
  docopt==0.6.2
  slack-sdk==3.15.2

[options.packages.find]
where=.

[options.entry_points]
console_scripts =
    buzzstats = buzzstats.cmd.main:main

[flake8]
max-line-length = 140
exclude = node_modules
select = E,F,C90,H
